# doai-me-app

./: .env.example  .env.local.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .sentry-cleanup-marker  .vercelignore  README.md  RUN_LOCAL.md  SENTRY_CLEANUP_INSTRUCTIONS.md  docker-compose.yml  eslint.config.mjs  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  sentry.edge.config.ts  sentry.server.config.ts  sonar-project.properties  tsconfig.json  vercel.json
.claude/: README.md  settings.local.json  settings.local.json.example
.github/: DEPLOYMENT.md  release-notes-node-runner.md
.sisyphus/: handoff-p0-dev-agent.md
Server_Vultr/: README.md  docker-compose.yml  env.example
app/: globals.css  layout.tsx  page.tsx
autox-scripts/: README.md  main.js  main_v2.js  package.json
backend/: main.py
client-android/: human_patterns.js
cloud-gateway/: Caddyfile  Dockerfile  deploy.sh  docker-compose.yml  requirements.txt  test_broadcast.json
command_catalogs/: youtube_dom_actions_v1.json
components/: ChartCard.tsx  DataTable.tsx  DeviceHeatmap.tsx  Drawer.tsx  GlobalLoader.tsx  KpiCard.tsx  Loader.tsx  MiniMap.tsx  Skeleton.tsx  Toast.tsx  footer.tsx  header.tsx  ide-animation.tsx  orbit-animation.tsx  projects-grid.tsx  theme-changer.tsx  theme-toggle.tsx
dashboard/: DATABASE_SCHEMA.md  MIGRATION_GUIDE.md  package.json
deploy/: DEPLOY_GUIDE.md  aifarm_setup.sh  deploy.bat  deploy.env.example  deploy_to_vultr.bat.example  setup_tailscale.sh  vultr_setup.sh
doai-me/: package-lock.json  package.json
docker/: docker-compose.dev.yml
docs/: ADMIN_SETUP.md  API-Contracts-v1.md  APPSMITH_SETUP_GUIDE.md  AUTOX_SETUP.md  Callback-Contract-v1.md  DESIGN_SYSTEM.md  DoAi-Me-MVP-Orchestration-Rules-v1.md  GATEWAY_PROTOCOL_V2.md  IMPLEMENTATION_SPEC.md  INDEX.md  INFRASTRUCTURE_SPEC_V1.md  KEY-ROTATION-ACTIONS.md  LAIXI_INTEGRATION.md  MVP_SETUP_CHECKLIST.md  MVP_WORKFLOW.md  Minimal-Vendor-Adapter-Contract.md  PR-YOUTUBE-AUTOMATION.md  Prometheus-Workflow-DSL-v1.md  QA-Ralph-Report-Routes-Console-API.md  RHIZOME_README.md  Security-and-Setup-Checklist.md  SonarQube-Choice-Review.md  TESTING_GUIDE.md  UI-Implementation-Mismatch-List.md  Vercel-404-Quick-Diagnosis.md  WIFI_MODULE_GUIDE.md  Workflow-Recipe-DSL-v1-QA.md  YOUTUBE_SETUP_GUIDE.md  admin-dashboard-spec.md  database-setup-guide.md  deployment-domains.md  execution-policy-p0.md  (+8 more)
(+1125 files in other folders)
