[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doaime"
version = "2.0.0"
description = "DoAi.Me - AI Farm Orchestration System"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Private"}
authors = [
    {name = "DoAi.Me Team", email = "dev@doai.me"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "supabase>=2.3.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "loguru>=0.7.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "slowapi>=0.1.9",
    "aiohttp>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests - no DB/network required",
    "integration: Integration tests - Supabase connection required",
    "e2e: End-to-end tests - Laixi + device connection required",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "W293", "W291"]  # Allow trailing whitespace for now

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E402", "F401"]  # Allow imports after sys.path manipulation
"archive/**/*.py" = ["E402", "E722", "F401"]  # Deprecated code - minimal checks
"scripts/**/*.py" = ["E402"]  # Scripts may need path setup
"services/cloud-gateway/main.py" = ["E402"]  # Loads env before imports
"services/api/api/routers/*.py" = ["F401"]  # Routers may import for re-export
"local/**/*.py" = ["E402", "E722"]  # Local dev code

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^docs/",
]

